--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,8 @@
     "type": "project",
     "require": {
         "symfony/console": "^4.0",
-        "php-amqplib/php-amqplib": "2.7.2"
+        "php-amqplib/php-amqplib": "2.7.2",
+        "symfony/dotenv": "^4.0"
     },
     "license": "MIT",
     "authors": [
