--- a/docker/.env
+++ b/docker/.env
@@ -1,3 +1,4 @@
+# Docker configuration
 COMPOSE_PROJECT_NAME=rbtmqexp
 
 # RabbitMQ Docker image Environment Variables
@@ -10,3 +11,7 @@ RABBITMQ_DEFAULT_VHOST=/
 
 # RabbitMQ Environment Variables
 # https://www.rabbitmq.com/configure.html#define-environment-variables
+
+# RabbitMQ cluster configuration
+RABBITMQ_CLUSTER_HOST=haproxy
+RABBITMQ_CLUSTER_PORT=5672
